Flatten jvm metrics (#61)
* Flatten jvm metrics

* Add jvm metrics to schema

* Add memory metrics to dashboard

* Bug fix

* Unify memory metric model